--- a/Friendsbook/Friendsbook/Pages/MainPage.xaml
+++ b/Friendsbook/Friendsbook/Pages/MainPage.xaml
@@ -2,7 +2,9 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:views="clr-namespace:Friendsbook.Views"
-             x:Class="Friendsbook.Pages.MainPage">
+             xmlns:viewModels="clr-namespace:Friendsbook.ViewModels"
+             x:Class="Friendsbook.Pages.MainPage"
+             x:DataType="viewModels:MainPageViewModel">
 
     <VerticalStackLayout>
         <views:FriendsView />
