--- a/Friendsbook/Friendsbook/Views/FriendListItemView.xaml
+++ b/Friendsbook/Friendsbook/Views/FriendListItemView.xaml
@@ -4,7 +4,7 @@
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
              xmlns:controls="clr-namespace:Friendsbook.Controls"
              x:Class="Friendsbook.Views.FriendListItemView">
-    <controls:ClickableGrid Padding="0, 5" Command="{Binding ClickCommand}" x:Name="CustomGrid">
+    <controls:ClickableGrid Padding="0, 5">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
@@ -12,7 +12,7 @@
 
         <Frame Grid.Column="0" CornerRadius="360" Margin="5, 0">
             <Grid>
-                <Image Grid.Column="0" Aspect="AspectFit" HeightRequest="25" WidthRequest="25">
+                <Image Grid.Column="0" Aspect="AspectFill" HeightRequest="25" WidthRequest="25">
                     <Image.Style>
                         <Style TargetType="Image">
                             <Style.Triggers>
