--- a/Friendsbook/Friendsbook/Views/FriendsView.xaml
+++ b/Friendsbook/Friendsbook/Views/FriendsView.xaml
@@ -2,7 +2,8 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:views="clr-namespace:Friendsbook.Views"
-             x:Name="FriendsviewClick"
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+             x:DataType="views:FriendsViewModel"
              x:Class="Friendsbook.Views.FriendsView">
     <Grid Padding="5,0">
         <Grid.RowDefinitions>
@@ -10,7 +11,9 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <SearchBar Placeholder="Search" Grid.Row="0" HeightRequest="50" />
+        <!-- TODO: Fix search -->
+        <SearchBar Placeholder="Search" Grid.Row="0" HeightRequest="50" Text="{Binding Search}" />
+
 
         <ScrollView Grid.Row="1" VerticalScrollBarVisibility="Always">
             <ListView ItemsSource="{Binding Friends}">
