changed name of route in shell

--- a/Friendsbook/Friendsbook/AppShell.xaml
+++ b/Friendsbook/Friendsbook/AppShell.xaml
@@ -8,7 +8,7 @@
 
     <ShellContent
         ContentTemplate="{DataTemplate page:MainPage}"
-        Route="MainPage" 
+        Route="RootPage"
     />
 
 </Shell>
