--- a/FinalProject/FinalProject/Resources/Styles/OverrideStyles.xaml
+++ b/FinalProject/FinalProject/Resources/Styles/OverrideStyles.xaml
@@ -15,4 +15,9 @@
         <Setter Property="FontSize" Value="32" />
         <Setter Property="Padding" Value="6, 3" />
     </Style>
+
+    <Style x:Key="HeaderLabelStyle" TargetType="mdc:Label" BasedOn="{StaticResource DefaultLabelStyle}">
+        <Setter Property="FontSize" Value="12" />
+        <Setter Property="ForegroundColor" Value="{StaticResource SecondaryContainerColor}" />
+    </Style>
 </ResourceDictionary>
